feat: integrate app config file.
